<resources>
    <string name="app_name">MailClient</string>
    <string name="email">Адрес эл. почты</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="incoming">Входящие</string>
    <string name="sent">Отправленные</string>
    <string name="deffered">Отложенные</string>
    <string name="drafts">Черновики</string>
    <string name="favourites">Избранное</string>
    <string name="spam">Спам</string>
    <string name="quit">Выйти</string>
    <string name="from">От</string>
    <string name="to">Кому</string>
    <string name="date">Дата</string>
    <string name="from_colon">От:</string>
    <string name="to_colon">Кому:</string>
    <string name="topic_colon">Тема:</string>
    <string name="enter_message_hint">Введите текст сообщения...</string>
    <string name="message_sent">Сообщние отправлено</string>
    <string name="send_error">Возникла ошибка во время отправки сообщения</string>
    <string name="save_draft">Сохранить черновик?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">Ок</string>
    <string name="add_receiver">Добавьте получателя!</string>
    <string name="without_topic">(без темы)</string>
    <string name="loading_data">Выполняется загрузка данных</string>
    <string name="sending_message">Сообщение отправлется</string>
    <string name="message_deferred">Отправка сообщения запланирована</string>
    <string name="message_send_notification_title">Сообщение отправлено</string>
    <string name="saving_draft">Сохранение черновика</string>
    <string name="draft_saved">Черновик сохранен</string>
    <string name="draft_saving_error">Не удалось сохранить черновик</string>
    <string name="deleting_mail">Письмо удаляется</string>
    <string name="mail_deleted">Письмо удалено</string>
    <string name="mail_deleting_error">Не удалось удалить письмо</string>
    <string name="required_input">Обязательное поле</string>
    <string name="invalid_password">Неверный пароль</string>
    <string name="enter_valid_email">Введите верный email</string>
</resources>