<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backBtn"
            style="@style/floating_action_button_no_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/back_icon"
            app:useCompatPadding="false" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/attachmentBtn"
            style="@style/floating_action_button_no_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/delayBtn"
            android:clickable="true"
            app:srcCompat="@drawable/attachment_icon"
            app:useCompatPadding="false"
            android:visibility="gone"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delayBtn"
            style="@style/floating_action_button_no_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/sendBtn"
            android:clickable="true"
            app:srcCompat="@drawable/clock_icon"
            app:useCompatPadding="false" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sendBtn"
            style="@style/floating_action_button_no_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            app:srcCompat="@drawable/send_icon"
            app:useCompatPadding="false" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:id="@+id/fromLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fromTV"
                style="@style/text_vertical_sequence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/from_colon" />

            <EditText
                android:id="@+id/fromMailEdTxt"
                style="@style/text_vertical_sequence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="textPersonName"
                android:longClickable="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/toLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/toTV"
                style="@style/text_vertical_sequence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/to_colon" />

            <EditText
                android:id="@+id/toMailEdTxt"
                style="@style/text_vertical_sequence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:inputType="textAutoComplete" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/topicLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/topicTV"
                style="@style/text_vertical_sequence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/topic_colon" />

            <EditText
                android:id="@+id/topicEdTxt"
                style="@style/text_vertical_sequence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:inputType="textAutoComplete" />
        </LinearLayout>

        <EditText
            android:id="@+id/messageTextViewRead"
            style="@style/text_vertical_sequence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:background="@drawable/message_text_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_message_hint"
            android:inputType="textMultiLine"
            android:minLines="16"
            android:padding="20dp"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>