<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backBtnRead"
            style="@style/floating_action_button_no_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/back_icon"
            app:useCompatPadding="false" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editDraftBtn"
            style="@style/floating_action_button_no_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/deleteMailBtn"
            android:visibility="gone"
            app:srcCompat="@drawable/edit_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteMailBtn"
            style="@style/floating_action_button_no_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/delete_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/messageAreaRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/topicTextViewRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxWidth="320dp"
            android:text="Курсовая работа, Шинкевич"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/dateTextViewRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topicTextViewRead"
            android:text="01.12.2022, 12:00"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fromTextView"
            style="@style/text_vertical_sequence"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateTextViewRead"
            android:text="@string/from_colon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fromEmailTextView"
            style="@style/text_vertical_sequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateTextViewRead"
            android:layout_toEndOf="@id/fromTextView"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/toTextView"
            style="@style/text_vertical_sequence"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/fromTextView"
            android:text="@string/to_colon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/toEmailTextView"
            style="@style/text_vertical_sequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fromTextView"
            android:layout_toEndOf="@id/toTextView"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/favouritesBtnRead"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignTop="@id/topicTextViewRead"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/transparent"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/star_icon" />

        <TextView
            android:id="@+id/categoryTV"
            style="@style/text_vertical_sequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toTextView"
            android:layout_alignParentStart="true"
            android:text="@string/incoming"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/category_block"
            android:paddingHorizontal="12dp"/>


        <TextView
            android:id="@+id/messageTextViewRead"
            style="@style/text_vertical_sequence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/categoryTV"
            android:layout_marginTop="10dp"
            android:background="@drawable/message_text_border"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="none"
            android:minLines="16"
            android:padding="20dp"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </RelativeLayout>

</LinearLayout>